--- a/Maze_Solver.ipynb
+++ b/Maze_Solver.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "id": "3754e4ef",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "id": "31d11a9f",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "id": "18834987",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "2f990ce3",
    "metadata": {},
    "outputs": [],
@@ -718,7 +718,6 @@
     "        self.maze = np.copy(self.maze)\n",
     "        nrows, ncols = self.maze.shape\n",
     "        row, col = agent\n",
-    "        self.maze[row, col] = agent_mark\n",
     "        self.state = (row, col, 'start')\n",
     "        self.threshold = -0.01 * self.maze.shape[0]**2\n",
     "        self.reward_sum = 0\n",
@@ -780,7 +779,6 @@
     "    # Visualization Encodes\n",
     "    def draw_env(self):\n",
     "        row, col, valid = self.state\n",
-    "        canvas[row, col] = agent_mark\n",
     "        m = self.state[0]\n",
     "        n = self.state[1]\n",
     "        environment = get_information(m,n)\n",
@@ -902,7 +900,7 @@
     "            targets[i] = self.predict(envstate)\n",
     "            # Q_sa = derived policy = max quality env/action = max_a' Q(s', a')\n",
     "            Q_sa = np.max(self.predict(envstate_next))\n",
-    "            if game_over:\n",
+    "            if travel_over:\n",
     "                targets[i, action] = reward\n",
     "            else:\n",
     "                # reward + gamma * max_a' Q(s', a')\n",
@@ -1053,7 +1051,6 @@
    "outputs": [],
    "source": [
     "maze = np.zeros((201,201))\n",
-    "DQNmaze = DQNmaze(maze)\n",
     "environ = np.zeros((3,3))\n",
     "model = build_model(environ)\n",
     "qtrain(model, maze, epochs=10000, limit=0.1*maze.size, data_size=32)"
@@ -1151,7 +1148,6 @@
     "        self.maze = np.copy(self.maze)\n",
     "        nrows, ncols = self.maze.shape\n",
     "        row, col = agent\n",
-    "        self.maze[row, col] = agent_mark\n",
     "        self.state = (row, col, 'start')\n",
     "        self.threshold = -0.05 * self.maze.shape[0]**2\n",
     "        self.reward_sum = 0\n",
@@ -1220,7 +1216,6 @@
     "    # Visualization Encodes\n",
     "    def draw_env(self):\n",
     "        row, col, valid = self.state\n",
-    "        canvas[row, col] = agent_mark\n",
     "        m = self.state[0]\n",
     "        n = self.state[1]\n",
     "        environment = get_information(m,n)\n",
@@ -1341,7 +1336,7 @@
     "            targets[i] = self.predict(envstate)\n",
     "            # Q_sa = derived policy = max quality env/action = max_a' Q(s', a')\n",
     "            Q_sa = np.max(self.predict(envstate_next))\n",
-    "            if game_over:\n",
+    "            if travel_over:\n",
     "                targets[i, action] = reward\n",
     "            else:\n",
     "                # reward + gamma * max_a' Q(s', a')\n",
@@ -1481,7 +1476,6 @@
    "outputs": [],
    "source": [
     "maze = np.zeros((201,201))\n",
-    "DQNmaze = DQNmaze(maze)\n",
     "environ = np.zeros((3,3))\n",
     "model = build_model(environ)\n",
     "qtrain(model, maze, epochs=10000, limit=0.5*maze.size, data_size=32)"
